--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
 
   path_provider: ^2.1.1
 
+  pull_to_refresh: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,7 @@ dev_dependencies:
   flutter_lints: ^1.0.4
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.1.0
+  flutter_gen_runner:
 
 # Config icon application
 flutter_icons:
@@ -71,5 +74,17 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/images/
+
 flutter_intl:
   enabled: true
+
+flutter_gen:
+  output: lib/gen/ # Optional (default: lib/gen/)
+  line_length: 80 # Optional (default: 80)
+
+  # Optional
+  integrations:
+    flutter_svg: true
+    flare_flutter: true
+    rive: true
